--- a/doc/main.tex
+++ b/doc/main.tex
@@ -107,8 +107,6 @@ bookmarks=true,bookmarksopenlevel=2]{hyperref}
 
 
 
-
-
 \lstset{language=Python}
 
 %New colors defined below
@@ -226,9 +224,7 @@ bookmarks=true,bookmarksopenlevel=2]{hyperref}
 \include{sections/future-works}
 \appendix
 
-\include{appendix01}
-
-
+\include{sections/appendix}
 
 %%% APENDICES HERE
 
