--- a/doc/sections/introduction.tex
+++ b/doc/sections/introduction.tex
@@ -2,9 +2,9 @@
 
 The categorization of mushrooms, specifically the differentiation between toxic and non-toxic types, is an essential undertaking in multiple fields such as mycology, food safety, and medical science. Mushroom classification is particularly challenging as there are millions of different types of mushroom \cite{wibowo2018classification}. Toxic species should only be identified accurately to avoid potential harm from ingestion. Recent developments in machine learning methods have opened up exciting new possibilities for this classification process' automation.
 
-Several studies have delved into the application of machine learning algorithms and deep learning architectures for mushroom classification. (Tarawneh et al., 2022) explored the efficacy of Decision Trees, Random Forests, and Support Vector Machines in categorizing mushrooms based on their features\cite{inproceedings}. (Zhang et al., 2022) applied the CNN architecture to extract features from images and classify them into poisonous or edible. The paper uses only few species which are divided into poisonous and edible mushroom.  
+Deep learning has widespread applications across various domains like healthcare, finance, autonomous vehicles, and natural language processing\cite{alzubaidi2021review}.Several studies have delved into the application of machine learning algorithms and deep learning architectures for mushroom classification. (Tarawneh et al., 2022) explored the efficacy of Decision Trees, Random Forests, and Support Vector Machines in categorizing mushrooms based on their features\cite{inproceedings}. (Zhang et al., 2022) applied the CNN architecture to extract features from images and classify them into poisonous or edible. The paper uses only few species which are divided into poisonous and edible mushroom.  
 
-Moreover, significant advancements have been made in image classification, with the emergence of robust models trained on extensive datasets capable of recognizing diverse patterns within images. Leveraging these pre-trained models on new datasets is facilitated by their comprehensive understanding of various patterns. This simplifies the process of training on novel images, as the pre-trained networks already possess rich information about different patterns. Through transfer learning, wherein pre-trained models are fine-tuned for new tasks, notable progress has been demonstrated in augmenting the diagnostic capabilities of these models. Tan and Le (2020) presented a ground-breaking study that introduced the EfficientNet design, which uses compound scaling to transform the field\cite{tan2020efficientnet}. This novel methodology outperformed conventional scaling techniques, producing previously unheard-of efficiency-accuracy trade-offs. Among these, the EfficientNetB0 architecture is particularly noteworthy for being the best option for transfer learning because of its well-thought-out architecture and outstanding results in a variety of image classification tasks.
+Moreover, significant advancements have been made in image classification, with the emergence of robust models trained on extensive datasets capable of recognizing diverse patterns within images. Transfer learning is a method which involves leveraging knowledge from a pre-trained model on a source task to improve performance on a target task\cite{hussain2019study}. Leveraging these pre-trained models on new datasets is facilitated by their comprehensive understanding of various patterns. This simplifies the process of training on novel images, as the pre-trained networks already possess rich information about different patterns. Through transfer learning, wherein pre-trained models are fine-tuned for new tasks, notable progress has been demonstrated in augmenting the diagnostic capabilities of these models. Tan and Le (2020) presented a ground-breaking study that introduced the EfficientNet design, which uses compound scaling to transform the field\cite{tan2020efficientnet}. This novel methodology outperformed conventional scaling techniques, producing previously unheard-of efficiency-accuracy trade-offs. Among these, the EfficientNetB0 architecture is particularly noteworthy for being the best option for transfer learning because of its well-thought-out architecture and outstanding results in a variety of image classification tasks.
 
 (Ketwongsa et al., 2022) investigated the potential of Convolutional Neural Networks (CNNs) for mushroom classification, leveraging image processing techniques to extract discriminative features from mushroom images. The paper also use the concept of transfer learning. It uses alex net as a base model and try to fine tune it for the mushroom classification task\cite{ketwongsa2022new}. The paper use five species of mushroom found in Thailand classify it into poisonous and non poisonous and make machine learning model using transfer learning approach. 
 
